fixed contrast

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -97,7 +97,7 @@ footer a {
     display: flex;
     flex-direction: column;
     gap: 10px;
-    color: white;
+    color: black;
     padding: 15px 30px;
     margin-top: 50px;
     border-radius: 5px;
